# lazy-loader

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yaml  pyproject.toml  zensical.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/copier/mise-tasks/lint/: python.sh
.config/mise/conf.d/: 10-python.toml
.github/workflows/: release-pr.yaml
docs/reference/: README.md
src/liblaf/lazy_loader/: __init__.py  _attach_stub.py  _getter.py  _loader.py  _utils.py  _visitor.py
tests/: conftest.py  test_eager_import.py  test_exception.py  test_lazy_loader.py
tests/fake_pkg/: __init__.py  __init__.pyi  _import.py  _import_as.py  _some_func.py
